# egui_typed_input

./: Cargo.toml  README.md
examples/: color_hex.rs  number.rs  percentage.rs
src/: impls.rs  lib.rs
